--- a/src/component/hub/status/viewStatus.css
+++ b/src/component/hub/status/viewStatus.css
@@ -74,13 +74,22 @@ opacity: 0.9;
     text-align: left !important;
 }
 .menu__{
+    position: absolute;
+    background-color: white;
+    box-shadow: 0px 0px 10px #00000034;
+    overflow-y: auto;
+    z-index: 9999999;
+    overflow-x: hidden !important;
+}
+.view-list-status-from-platform{
+    position: absolute !important;
    
-background-color: white;
+/* background-color: white; */
 /* width: 110%; */
-box-shadow: 0px 0px 10px #00000034;
+/* box-shadow: 0px 0px 10px #00000034;
 overflow-y: auto;
 z-index: 9999999;
-overflow-x: hidden !important;
+ */
     /* position: fixed; */
 }
 
