--- a/src/component/hubFeature/Overview/viewFilesOfProject/viewFilesOfProject.css
+++ b/src/component/hubFeature/Overview/viewFilesOfProject/viewFilesOfProject.css
@@ -3,6 +3,7 @@
     background-color: white;
     border-radius: 2%;
     padding: 1vw;
+    margin-bottom: 2%;
  }
 .iconsList{
     text-align: center;
