--- a/src/component/hub/tabs/viewTaskByCardTabs/ViewTaskByCradTabs.css
+++ b/src/component/hub/tabs/viewTaskByCardTabs/ViewTaskByCradTabs.css
@@ -102,10 +102,16 @@
 }
 .autosize {
     resize: none;
-     overflow: hidden;
+     /* overflow: hidden; */
      max-height: 80px;
     /* -webkit-box-orient: vertical; */ 
     /* -webkit-line-clamp: 4;
     overflow: hidden;
     display: -webkit-box; */
+  }
+  .autosize::-webkit-scrollbar-thumb{
+    background: white !important; 
+  }
+  .autosize::-webkit-scrollbar-track{
+    box-shadow: none; 
   }
