--- a/src/component/hub/task/taskDetails/taskDetails.css
+++ b/src/component/hub/task/taskDetails/taskDetails.css
@@ -99,15 +99,9 @@ textarea:focus{
 .mils{
     display: inline;
 }
-.task-details{
-  /* overflow-x: auto !important; */
+.form-control{
+    background-color: transparent !important;
 }
-.btns-in-view-details-task{
-  /* margin-top:8vh  !important; */
-}
-.task-details > .form-group{
-    /* margin-bottom: 0.5rem !important; */
-  }
   .task-details > .dropdown{
 z-index: 9999 !important; 
  }
@@ -134,7 +128,15 @@ z-index: 9999 !important;
   margin-top: 11px;
 
 }
-
+.details .form-control .details .aaaaaaaaa  .css-yk16xz-control {
+  background-color: transparent !important;
+}
+.dropdown-toggle{
+  background-color:white;
+}
+.css-yk16xz-control,.css-2b097c-container{
+  background-color: none !important;
+}
 .btn-option-in-task{
   display: inline-block !important;
 }
@@ -217,11 +219,12 @@ z-index: 9999 !important;
     /* margin-left: 2%; */
   }
 .assingto-task-hover{
+  position: relative;
   display: none;
 }
 .files-task-hover{
   display: none;
 }
 .priority-task-details .css-2b097c-container{
-  background-color: #EDFBFC!important;
+  /* background-color: #EDFBFC!important; */
 }
