--- a/src/component/hub/workspace/editWorkspace/editWorkspace.css
+++ b/src/component/hub/workspace/editWorkspace/editWorkspace.css
@@ -17,7 +17,7 @@
       font-size: x-large;
       font-weight: 600;
   }
-  .details .form-control , .details  .css-yk16xz-control{
+  .details .form-control {
       background-color: #EDFBFC!important;
       border:none !important;
 
@@ -25,6 +25,12 @@
       text-align: left;
       font: normal normal medium 16px/21px Roboto;
       /* letter-spacing: 0.32px; */
+  }
+  .details  .css-yk16xz-control{
+    background-color: transparent!important;
+    border:none !important;
+    text-align: left;
+    font: normal normal medium 16px/21px Roboto;
   }
   /* input[type=date]::-webkit-calendar-picker-indicator {
     margin: 1px;
