--- a/src/component/hub/tabs/viewCardsTabs.css
+++ b/src/component/hub/tabs/viewCardsTabs.css
@@ -28,7 +28,8 @@
 
 
 .card-body {
-  padding: 1rem !important;
+  padding: 1rem ;
+  padding-bottom: 4px !important;
   /* padding-top: 0.5 !important; */
 }
 #add-new-card{
