--- a/src/component/hub/workspace/editWorkspace/editWorkspace.css
+++ b/src/component/hub/workspace/editWorkspace/editWorkspace.css
@@ -17,14 +17,12 @@
       font-size: x-large;
       font-weight: 600;
   }
-  .details .form-control , .details  .css-yk16xz-control{
+  .details .form-control , .details  .css-yk16xz-control,
+  .detailsTaskNotBelong .inputTaskN{
       background-color: #EDFBFC!important;
       border:none !important;
-
-      /* color: var(--unnamed-color-0a102e); */
       text-align: left;
       font: normal normal medium 16px/21px Roboto;
-      /* letter-spacing: 0.32px; */
   }
   /* input[type=date]::-webkit-calendar-picker-indicator {
     margin: 1px;
