--- a/src/component/hub/hub.css
+++ b/src/component/hub/hub.css
@@ -6,13 +6,18 @@
     
     .bodyHub {
         padding-right: 1.8rem !important;
-        /* margin-top:24px !important; */
+        flex: 0 0 84.333333%;
+        max-width: 86.333333%;
+        margin-left: 16px;
     }
     .back-screen{
         background-color: #E8EAEC !important;
         /* height: 100vh; */
     }
-    
+    .configuratorBlue{
+        flex: 0 0 13.666667%;
+        max-width: 13.666667%;
+    }
     
     #cdggdfdfb{
         margin-top: 100px;
