--- a/src/component/hub/task/taskNotBelongCardForUser/taskNotBelongCardForUser.css
+++ b/src/component/hub/task/taskNotBelongCardForUser/taskNotBelongCardForUser.css
@@ -18,6 +18,16 @@
     position: relative;
 }
 
+.bacW .css-yk16xz-control{
+    border: none !important;
+}
+.bacW .css-yk16xz-control::after { 
+    /* content: url(https://static.thenounproject.com/png/551749-200.png); */
+  }
+.bacW{
+    background-color: white !important;
+}
+
 .addTaskNotBelong:focus,.addTaskNotBelong:hover{
     outline: none !important;
 }
