--- a/src/component/hub/body/body.css
+++ b/src/component/hub/body/body.css
@@ -35,8 +35,8 @@
   /* Track */
  ::-webkit-scrollbar-track {
     border-radius: 10px;
-    box-shadow: inset 0 0 5px grey; 
-  
+    /* box-shadow: inset 0 0 5px grey;  */
+    background-color: rgb(231, 231, 231);
   }
 
  
