--- a/src/component/hub/SelectHeader/selectHeader.css
+++ b/src/component/hub/SelectHeader/selectHeader.css
@@ -8,10 +8,10 @@
         padding-top: 0.7vh;
         padding-bottom: 1.5vh;
         background: #FFFFFF 0% 0% no-repeat padding-box;
-        border-radius: 12px;
+        border-radius: 5px;
         opacity: 1;
         box-shadow: 0px 3px 6px #00000029;
-
+        margin-right: 10px;
         
 }
 .back-header{
