--- a/src/component/hub/tabs/tabs.css
+++ b/src/component/hub/tabs/tabs.css
@@ -4,12 +4,13 @@
       /* overflow-y: hidden !important; */
 }
 .body-cards{
-  height: 85vh;
+  height: 86vh;
     background: #FFFFFF 0% 0% no-repeat padding-box;
-    border-radius: 12px;
+    border-radius:5px;
     opacity: 1;
     overflow-y: auto!important;
     box-shadow: 0px 3px 6px #00000029;
+    margin-right: 10px;
 }
 @media screen and (min-width: 770px) {
     .wraperr-tabs >.row{
