--- a/src/component/hub/tabs/viewTaskByCardTabs/ViewTaskByCradTabs.css
+++ b/src/component/hub/tabs/viewTaskByCardTabs/ViewTaskByCradTabs.css
@@ -27,6 +27,7 @@
     margin-top: 20px;
     margin-right: auto;
     margin-left: auto;
+    /* padding: 8px; */
 }
 .task-name-span{
     /* text-indent: 5vh !important; */
@@ -48,7 +49,7 @@
     border-radius: 13px;
    /* max-width: 110px; */
    max-width: 110px;
-   height: 25px;
+   height: 23px;
    /* display: inline-block !important; */
 
   }
@@ -59,7 +60,7 @@
     font-weight: 300;
     opacity: 0.4;
     max-width: 110px;
-    height: 25px;
+    height: 23px;
     /* font-weight: 400; */
 
   }
@@ -102,6 +103,7 @@
     padding-bottom: 0 !important;
 }
 .autosize {
+    padding:10px;
     resize: none;
      /* overflow: hidden; */
      max-height: 80px;
