--- a/src/component/hub/teamView/teamView.css
+++ b/src/component/hub/teamView/teamView.css
@@ -1,21 +1,39 @@
 .imgTeam{
     border-radius: 50%;
     display: inline-block;
-    height: 20px;
-    width: 20px;
+    height: 23px;
+    width: 23px;
     background-color: #C4CCD5;
     text-align: left;
-    font: normal normal bold 15px/20px Roboto;
+    /* font: normal normal bold 15px/20px Roboto; */
     letter-spacing: 0px;
     color: #FFFFFF;
     text-transform: capitalize;
     opacity: 1;
-    font-size: x-small;
+    /* font-size:medium; */
+    text-align: center;
+    position: relative;
+    margin-right: -2px;
+}
+.imgTeamTabs{
+    border-radius: 50%;
+    display: inline-block;
+    height: 23px;
+    width: 23px;
+    background-color: #C4CCD5;
+    text-align: left;
+    /* font: normal normal bold 15px/20px Roboto; */
+    letter-spacing: 0px;
+    color: #FFFFFF;
+    text-transform: capitalize;
+    opacity: 1;
+    /* font-size:medium; */
     text-align: center;
     position: relative;
     margin-right: -2px;
 }
 
 .marginTeam{
-    margin-left:-3px;
+    /* margin-left:-3px; */
+    display: inline-block !important;
 }
