--- a/src/component/hub/viewDetails/viewDetails.css
+++ b/src/component/hub/viewDetails/viewDetails.css
@@ -1,21 +1,22 @@
 .view-details{
 background-color: white ;
 /* box-shadow: -5px 0px 40px #0000002C; */
-border-radius: 12px;
+border-radius:5px;
 opacity: 1;
 position: absolute !important;
-height:93.8vh;
+height:97vh;
 top:0;
 right: 0;
 z-index: 999;
 border-left: 9px solid   hsla(178, 51%, 41%, 1)  ;
-margin-right: 1.8rem !important;
+margin-right: 5px !important;
 overflow-x: hidden !important;
+margin-top: 10px;
 }
 @media screen and (min-width: 1550px) {
   
     .view-details{
-      height: 95.8vh !important;
+      height: 97vh !important;
     }
   
   }
