--- a/src/component/hub/projectPlatform/projectPlatform.css
+++ b/src/component/hub/projectPlatform/projectPlatform.css
@@ -1,16 +1,16 @@
 .body{
-  height: 87vh;;
+  height: 85vh;;
   background: #FFFFFF 0% 0% no-repeat padding-box;
     border-radius: 5px;
     opacity: 1;  
     overflow-y: auto!important;
-    box-shadow: 0px 3px 6px #00000029;
+    /* box-shadow: 0px 3px 6px #00000029; */
     margin-right: 10px;
 
   }
 
   .bodyListTak{
-    height: 86vh;
+    height: 85vh;
     background: #FFFFFF 0% 0% no-repeat padding-box;
     border-radius: 5px;
     opacity: 1;
