--- a/src/component/Gantt/gantt.css
+++ b/src/component/Gantt/gantt.css
@@ -1,6 +1,40 @@
 /* body {
   background-color: #c4ccd5;
 } */
+:root {
+  --red:#ffd2d2;
+  --redBorder: #ff9898;
+  --yellowBorder: rgb(253 238 101);
+  --yellow: rgb(255 247 171);
+  --orangeBorder: #ffd16d;
+  --orange:#ffde95;
+}
+.p-gantt-status{
+  position: absolute;
+  top: -4px;
+  left: 20%;
+}
+.gantt_status_right{
+  /* position: absolute;
+    left: 10px;
+    top: 3px; */
+  border-radius: 15px !important;
+  color: white !important;
+  font-weight: 300;
+  /* opacity: 0.9; */
+  margin: auto;
+  height: 83% !important;
+  width: 18% !important;
+  padding-top: 0.5vh;
+  padding-bottom: 0.5vh;
+  font-weight: 400;
+  display: inline-block !important;
+}
+.gantt_side_content{
+  /* width:100% !important; */
+  font-size: 12px !important;
+  font-family: 'Roboto' !important;
+}
 .gantt_task_content {
   color: #778CA2 !important;
 }
@@ -40,56 +74,76 @@
 .gantt_task_line{
   z-index: 3;
 }
+/* .gantt_task_line{
+  box-shadow: 0px 3px 6px #00000029;
+} */
 .gantt_task_line:hover{
   box-shadow: 0px 3px 6px #00000029;
 }
+.gantt_task_content{
+  font-weight: bold;
+  /* text-align: left !important; */
+  /* padding-left: 14px !important; */
+}
 .yellowBorder .gantt_task_progress {
-  background : linear-gradient(to right, #e9f0af 0%, rgb(218, 199, 24) 100%);
+  background : linear-gradient(to right, var(--yellowBorder) 0%, var(--yellowBorder) 100%);
   color: white;
 }
+.yellowBorder .gantt_task_content{
+  background-color:var(--yellow) !important;
+  /* background-color:rgb(255 242 126) !important; */
+}
 .gantt_task_line.gantt_selected.yellowBorder {
-  box-shadow: 0 0 5px rgb(218, 199, 24) !important;
+  box-shadow: 0 0 5px var(--yellowBorder) !important;
 }
 .gantt_task_line.yellowBorder {
+  background-color:var(--yellow) !important;
   border-radius: 5px !important;
-  border: rgb(218, 199, 24) 3px solid !important;
+  border:var(--yellowBorder) 3px solid !important;
   color: white !important;
 }
 .yellowBorder:hover {
-  border-left: rgb(218, 199, 24) 10px solid !important;
-  border-right: rgb(218, 199, 24) 10px solid !important;
+  border-left: var(--yellowBorder) 10px solid !important;
+  border-right: var(--yellowBorder) 10px solid !important;
   color: white !important;
 }
+.redBorder .gantt_task_content{
+  background-color:var(--red) !important;
+}
 .gantt_task_line.gantt_selected.redBorder {
-  box-shadow: 0 0 5px red !important;
+  box-shadow: 0 0 5px var(--redBorder) !important;
 }
 .gantt_task_line.redBorder  {
+  background-color:var(--red) !important;
   border-radius: 5px !important;
-  border:  3px solid red!important;
-  background-color: white !important;
+  border:  3px solid var(--redBorder)!important;
 }
 .redBorder:hover {
-  border-left: red 10px solid !important;
-  border-right: red 10px solid !important;
+  border-left: var(--redBorder) 10px solid !important;
+  border-right: var(--redBorder) 10px solid !important;
 }
 
 .redBorder .gantt_task_progress {
   position: absolute;
-  background: linear-gradient(to right,rgb(233, 139, 139),  red)  !important;
+  background: linear-gradient(to right,var(--redBorder),  var(--redBorder))  !important;
   text-align: end;
   align-items: end;
 }
 .gantt_task_line.gantt_selected.orangeBorder {
-  box-shadow: 0 0 5px #F8B520 !important;
+  box-shadow: 0 0 5px var(--orangeBorder) !important;
+}
+.orangeBorder .gantt_task_content{
+  background-color:var(--orange) !important
 }
 .gantt_task_line.orangeBorder {
+  background-color:var(--orange) !important;
   border-radius: 5px !important;
-  border:  #F8B520 3px solid !important;
-  background-color: white !important;
+  border:  var(--orangeBorder) 3px solid !important;
+  /* background-color: white !important; */
 }
 .orangeBorder:hover {
-  border-left: #F8B520 10px solid !important;
-  border-right: #F8B520 10px solid !important;
+  border-left: var(--orangeBorder) 10px solid !important;
+  border-right: var(--orangeBorder) 10px solid !important;
 }
 .orangeBorder .gantt_task_progress {
   position: relative;
@@ -99,7 +153,7 @@
   align-content: right !important;
 }
 .gantt_task_progress {
-  background: red;
+  background: var(--red);
 }
 
 .gantt_tree_content{
@@ -134,10 +188,11 @@
   background-color:#ecfbf8 !important;
 }
 .today{
+  /* display: none; */
   /* left: 0px !important; */
   background-color: rgb(218, 246, 247) !important;
   width: 40px !important;
-  margin-left: -21px !important;
+  margin-left: -16px !important;
   z-index: 1!important;
   opacity: 0.5 !important;
   min-height: 100vh !important;
@@ -252,9 +307,11 @@
   height: 103% !important;
 }
 .zoom-label{
+  text-align:left !important;
   position: absolute;
-  bottom:40px;
-  right: 40px;
+  top: 6px;
+  left: 20px;
+  width: 140px;
 }
 .gantt_task .gantt_task_scale .gantt_scale_cell,.gantt_task_content{
   font-family: 'Roboto';
