--- a/src/component/hubFeature/Overview/overview.css
+++ b/src/component/hubFeature/Overview/overview.css
@@ -1,36 +1,67 @@
-.scrollbarOverview{
-    overflow-y: auto!important;
-    height: 82.7vh;
-    overflow-x:hidden;
-    border-radius: 0.4em;
+.overview{
+  height: 82.7vh;
+  border-radius: 5px;
     
 }
 .minHeight{
-  min-height:37vh;
-}
-.minHeightChat{
-  min-height:63vh;
-  max-height:63vh;
-height: 63vh;
+  min-height:50vh;
 }
 .projectName{
   width: 100%;
   background-color: white;
 }
 
-  .divChartAndMembers{
-    background-color:white;
-    border-radius:0.4em;
-  }
+.divChartAndMembers{
+  background-color:white;
+  border-radius:0.2em;
+}
+
+.scrollOverview{
+  overflow-y: scroll;
+  overflow-x: hidden;
+  height: 87.5vh;
+}
+.scrollOverview::-webkit-scrollbar {
+  width: 0px;
+  height: 0px;
+}
+
+.HangoutAndLogs{
+  border-radius: 2%;
+  background-color: white;
+}
+
+/* .overview{
+  height: 82.7vh;
+  border-radius: 5px;
+    
+}
+.minHeight{
+  min-height:50vh;
+}
+.projectName{
+  width: 100%;
+  background-color: white;
+}
+
+.divChartAndMembers{
+  background-color:white;
+  border-radius:0.2em;
+}
 
 .scrollbarOverview2{
   width:100%;
 }
-.filesOfProject{
-  /* border-top-left-radius: 3%;
-  border-top-right-radius: 3%;
-  border-bottom-left-radius: 3%;
-  border-bottom-right-radius: 3%; */
-border-radius: 0.4em;
-width: 100%;
+.scrollOverview{
+  overflow-y: scroll;
+  height: 87.5vh;
 }
+.scrollOverview::-webkit-scrollbar {
+  width: 0px;
+  height: 0px;
+}
+
+.HangoutAndLogs{
+  border-radius: 2%;
+  background-color: white;
+} */
