--- a/src/component/hubFeature/Overview/overview.css
+++ b/src/component/hubFeature/Overview/overview.css
@@ -26,6 +26,6 @@
   border-top-right-radius: 3%;
   border-bottom-left-radius: 3%;
   border-bottom-right-radius: 3%; */
-border-radius: 0.4em;
+border-radius: 5px;
 width: 100%;
 }
