--- a/src/component/hubFeature/Overview/viewFilesOfProject/filesFolder/filesFolder.css
+++ b/src/component/hubFeature/Overview/viewFilesOfProject/filesFolder/filesFolder.css
@@ -5,7 +5,7 @@
     border-style: solid; */
      cursor: pointer;
      border-radius: 3%;
-     height: 15vh;
+     min-height: 15vh;
  }
  .folderItem:hover{
   border: #38B1B5 0.1rem solid;
