--- a/src/component/hubFeature/Overview/viewFilesOfProject/viewFile/viewFile.css
+++ b/src/component/hubFeature/Overview/viewFilesOfProject/viewFile/viewFile.css
@@ -54,7 +54,6 @@
     opacity: 1;
     border-radius: 30%;
     transition: 0.2s;
-   
   }
   .checkmarkFile {
     position: absolute;
@@ -65,6 +64,10 @@
     border-radius: 30%;
    opacity: 0.8;
    margin-left: 1vw;
+  }
+  .checkmarkFile:hover{
+    /* background-color: #c4ccd4; */
+    background-color: red;
   }
   .checkmarkFile:after {
     content: "";
@@ -86,6 +89,8 @@
      padding: 0.2rem;
      border-bottom-right-radius: 3%;
      border-bottom-left-radius:3%;
+     font-size: 0.8em;
+     color: #778CA2;
 }
 .viewFile a{
        color: black;
@@ -103,7 +108,7 @@
     background-size: contain;
     max-width: 100%;
     max-height: 100%;
-    width: max-content;
+    /* width: max-content; */
     border-top-left-radius: 3%;
     border-top-right-radius: 3%;
     /* height: auto; */
