--- a/src/component/hub/rocketShip/rocketShip.css
+++ b/src/component/hub/rocketShip/rocketShip.css
@@ -3,6 +3,7 @@
     height:93px;
     position: relative;
     animation-name: example;
+    /* animation-duration: 0.9s; */
     animation-duration: 0.9s;
     z-index: 99999;
     /* animation-iteration-count:infinite; */
@@ -14,9 +15,19 @@
     position: absolute;
     top: 0px;
   }
-  
+   
+  /* 50%       { transform:translatex(50vw) translatey(-60vh) }
+  100%     { transform:translatex(80vw) translatey(-100vh) } */
+
   @keyframes example {
-     /* 0%   { left:0px; top:0px;} */
+   
+    /* 10%       { transform:translatex(50vw) translatey(-60vh) } */
+    /* 65%      { transform:translatex(55vw) translatey(-55vh); }
+    75%     { transform:translatex(70vw) translatey(-80vh) } */
+    100%     { transform:translatex(80vw) translatey(-100vh) }
+
+
+      /* 0%   { left:0px; top:0px;} */
    /* 40%  { left:50%; top:0px;}  */
 
     /* 0%       { transform: translatex(300px) translatey(-500px) } */
@@ -25,10 +36,6 @@
     /* 50%       { transform: translatex(30vw)  translatex(30vw) translatey(-50vh) }
     75%      { transform: translatex(40vw) translatey(-40vh); }
     100%     { transform: translatex(50vw) translatey(-30vh) } */
-    50%       { transform:translatex(50vw) translatey(-60vh) }
-    65%      { transform:translatex(55vw) translatey(-55vh); }
-    75%     { transform:translatex(70vw) translatey(-80vh) }
-    100%     { transform:translatex(80vw) translatey(-100vh) }
     /* 100%{opacity: 0;} */
         /* transform:rot.ate(360deg);} */
 
