assinto new contact

--- a/src/component/hub/color/color.css
+++ b/src/component/hub/color/color.css
@@ -8,3 +8,32 @@
   /* background-color:red; */
   display:inline-block;
 }
+.select-color-workspace{
+  width:35px;
+  height:35px;
+  display: inline-block;
+  margin-left: 5px;
+
+}
+.add-color-workspace{
+  background-color:white;
+  text-align:center;
+  width:35px;
+  height:35px;
+  /* font-size:large; */
+  border:1px solid black;
+  margin-left: 5px;
+  position: relative;
+
+
+}
+
+.add-color-workspace input {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  cursor: pointer;
+}
