--- a/src/component/hub/tabs/viewTaskByCardTabs/ViewTaskByCradTabs.css
+++ b/src/component/hub/tabs/viewTaskByCardTabs/ViewTaskByCradTabs.css
@@ -47,9 +47,10 @@
 .status-task-tabs{
     color:white;
     border-radius: 13px;
-   /* max-width: 110px; */
    max-width: 110px;
    height: 23px;
+   margin-top: 5px;
+
    /* display: inline-block !important; */
 
   }
@@ -61,6 +62,8 @@
     opacity: 0.4;
     max-width: 110px;
     height: 23px;
+    margin-top: 5px;
+
     /* font-weight: 400; */
 
   }
