--- a/src/component/Gantt/gantt.css
+++ b/src/component/Gantt/gantt.css
@@ -18,17 +18,25 @@
   /* position: absolute;
     left: 10px;
     top: 3px; */
-  border-radius: 15px !important;
+      /* opacity: 0.9; */
+
+  /* border-radius: 15px !important;
   color: white !important;
   font-weight: 300;
-  /* opacity: 0.9; */
   margin: auto;
   height: 83% !important;
   width: 18% !important;
   padding-top: 0.5vh;
   padding-bottom: 0.5vh;
-  font-weight: 400;
+  font-weight: 400; */
+  display: inline-flex !important;
+}
+.imgTeamGantt{
+  border-radius: 50% !important;
   display: inline-block !important;
+  width: 23px;
+  height: 23px;
+  margin-left: -2px;
 }
 .gantt_side_content{
   /* width:100% !important; */
@@ -192,7 +200,7 @@
   /* left: 0px !important; */
   background-color: rgb(218, 246, 247) !important;
   width: 40px !important;
-  margin-left: -16px !important;
+  margin-left: -23px !important;
   z-index: 1!important;
   opacity: 0.5 !important;
   min-height: 100vh !important;
