view and assigne

--- a/src/component/hub/task/viewTaskByCardTryS/ViewTaskByCradTryS.css
+++ b/src/component/hub/task/viewTaskByCardTryS/ViewTaskByCradTryS.css
@@ -69,11 +69,16 @@ opacity: 0.3;
 }
 
 .checkmark-place{
-  top: 9px;
+  top: 11px;
   left: 10px;
  
 }
-
+.span-total-task{
+  color:#358a8d;
+  border-radius: 8px;
+  padding:8px;
+  background-color:#68c7cb1a;
+}
 
 .check-task:hover input ~ .checkmark {
   background-color: #FFFFFF;
@@ -142,7 +147,10 @@ label{
   text-align: center;
 }
 .show-task1>div, .show-task1>label {
-  padding-top: 1vh;
+  display: flex;
+  align-items:center;
+  justify-content: center;
+  /* padding-top: 1vh; */
   margin-bottom: 0px !important;
 }
 /* .status-task{
@@ -245,7 +253,7 @@ width: 0 !important;
 height: 0;
 }
 .dnd-icon-1{
-  width:4%;
+  width:3%;
 }
 .dnd-icon{
   
