--- a/src/component/hub/task/viewTaskByCardTryS/ViewTaskByCradTryS.css
+++ b/src/component/hub/task/viewTaskByCardTryS/ViewTaskByCradTryS.css
@@ -69,8 +69,8 @@ opacity: 0.3;
 }
 
 .checkmark-place{
-  top: 9px;
-  left: 10px;
+  top: 2vh;
+  left: 1vw;
  
 }
 
@@ -102,7 +102,7 @@ opacity: 0.3;
 }
 .view-details-btn{
   text-align: right!important;
-  /* width: 100%; */
+  width:8vw;
 }
 .view-details-btn>button{
   border-radius: 5px;
@@ -132,7 +132,7 @@ opacity: 0.3;
 
 .show-task{
   background-color: transparent !important;
- 
+  width: 10vw;
 }
 .show-task1 label{
   padding:unset;
@@ -285,5 +285,11 @@ float: right !important;
   text-align:right !important;
   margin-left: 7px;
 
+}
+.likeDiv{
+  margin-top: -3vh;
+}
+.likeDiv img{
+  margin-top: -2vh;
 }
 
