--- a/src/App.css
+++ b/src/App.css
@@ -65,3 +65,6 @@ input,textarea,p,div,span{
 .tooltip-style{
   padding:4px !important;
 }
+/* .MuiTab-wrapper{
+  font-weight: 600 !important;
+} */
