--- a/src/component/hub/project/myQuill/myQuill.css
+++ b/src/component/hub/project/myQuill/myQuill.css
@@ -15,7 +15,7 @@
     max-height: 22vh;
     height: auto;
     overflow: auto;
-    min-height: 18vh;
+    /* min-height: 18vh; */
 }
 #textQuil .ql-snow{
     background-color: #EDFBFC!important;
