--- a/src/component/hub/body/body.css
+++ b/src/component/hub/body/body.css
@@ -23,7 +23,6 @@
   }
   .view-details{
     height: 96.5vh;
-
   }
 
 }
@@ -31,12 +30,12 @@
 ::-webkit-scrollbar {
   background-color: #FFFFFF ;
   width: 6px;
+  height: 6px !important;
 }
  
   /* Track */
  ::-webkit-scrollbar-track {
     border-radius: 10px;
-    /* box-shadow: inset 0 0 5px grey;  */
     background-color: rgb(231, 231, 231);
   }
 
