--- a/src/component/hub/tabs/viewCardsTabs.css
+++ b/src/component/hub/tabs/viewCardsTabs.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap');
 .view-cards-tabs .card-body{
      max-height:  72vh;
-    /* background: transparent linear-gradient(360deg, #87C5FE30 0%, #ebfff8 100%) 0% 0% no-repeat padding-box; */
-    background-color:#EDFBFC !important ;
+    /* background-color:#EDFBFC !important ; */
+    background-color: #f3f6f8 !important;
     border-radius: 0px 0px 8px 8px;
     text-align: left;
     letter-spacing: 0px;
@@ -35,7 +35,7 @@
   /* padding-top: 0.5 !important; */
 }
 #add-new-card{
-  background-color:  #EDFBFC  !important;
+  background-color:  #f3f6f8  !important;
 
 }
 span:focus{
@@ -45,7 +45,7 @@ span:focus{
   font-size: 16px;
   margin-top: 5px;
   font-weight: bold !important;
-  background-color: #EDFBFC !important;
+  background-color: #f3f6f8 !important;
 }
 .more {
   right: 6px;
@@ -53,7 +53,7 @@ span:focus{
   min-width: min-content !important;
 }
 .view-cards-tabs .card-header{
-    background-color: #EDFBFC !important;
+    background-color: #f3f6f8 !important;
     font-size: 16px;
     font-weight: 500;
 }
@@ -105,6 +105,8 @@ margin: auto !important;
     background-color: white;
     min-height: 95px;
     /* height: 115px; */
+    border: 1px solid #ffff;
+
     border-radius: 5px;
     position: relative !important;
 }
