--- a/src/component/hub/tabs/viewCardsTabs.css
+++ b/src/component/hub/tabs/viewCardsTabs.css
@@ -61,12 +61,7 @@ span:focus{
   padding: 4px !important;
   border-bottom: none !important;
 }
-#task-card:hover{
-  /* box-shadow: 2px 1px 2px 1px #00000029; */
-  /* box-shadow: 0px 3px 6px #00000029; */
- 
-        
-}
+
 .task-card:hover{
   border: 1px solid #1FB9C1;
   border-radius:5px;
@@ -179,7 +174,9 @@ margin: auto !important;
     .view-cards-tabs .card-body::-webkit-scrollbar-track:hover {
         box-shadow: inset 0 0 5px grey; 
       } */
-     
+      .textarea-name-task::-webkit-scrollbar{
+        opacity: 0;
+      }
     
     .hand-drag{
       display: inline-block;
