--- a/src/component/hub/task/taskDetails/taskDetails.css
+++ b/src/component/hub/task/taskDetails/taskDetails.css
@@ -94,7 +94,7 @@ textarea:focus{
   background-color:#98A9BC !important;
 }
 .css-2b097c-container:focus{
-  background-color:#98A9BC !important;
+  background-color:transparent !important;
 }
 .css-2b097c-container:active{
   background-color:#98A9BC !important;
