--- a/src/component/Gantt/DisplayGantt/displayGantt.css
+++ b/src/component/Gantt/DisplayGantt/displayGantt.css
@@ -18,7 +18,8 @@
 }
 
 .bodyGant{
-    height: 85vh;
+    margin-top:10px;
+    height: 87vh;
     background: #FFFFFF 0% 0% no-repeat padding-box;
     border-radius: 5px;
     opacity: 1;
