--- a/src/component/hub/SelectHeader/selectHeader.css
+++ b/src/component/hub/SelectHeader/selectHeader.css
@@ -11,10 +11,19 @@
         border-radius: 5px;
         opacity: 1;
         /* box-shadow: 0px 3px 6px #00000029; */
-        margin-right: 10px;
+        margin-right: 25px;
         
 }
+.css-rcy4yj-control{
+        background-color: transparent !important;
+}
+.css-1sxybcb-control{
+        background-color: transparent !important;
+
+}
+
 .back-header{
+        margin-top: 11px;
         cursor: pointer;
 }
 .select__control{
