--- a/src/component/hub/body/body.css
+++ b/src/component/hub/body/body.css
@@ -7,18 +7,21 @@
   overflow-y: auto!important;
 }
 .body-workspace{
-  height: 96.5vh;
+  margin-top:10px;
+  height: 87.3vh;
   background: #FFFFFF 0% 0% no-repeat padding-box;
   border-radius: 5px;
   opacity: 1;
   overflow: auto;
   overflow-x: hidden;
-  margin-right: 10px;
+  margin-right: 25px;
   /* box-shadow: 0px 3px 6px #00000029; */
+  margin-top: 10px;
 
 }
 @media screen and (min-width: 1550px) {
   .body-workspace {
+    margin-top:10px;
     height:96.5vh;
   }
   .view-details{
