--- a/src/component/hub/hub.css
+++ b/src/component/hub/hub.css
@@ -5,16 +5,55 @@ margin-left: 8vh;
 }
 
 .bodyHub {
-    padding-right:10px ;
-    margin-top: 10px;
     flex: 0 0 85%;
     max-width: 85%;
     /* margin-left: 16px; */
 }
+.font-logo-header{
+    color:white;
+
+}
+@media screen and (min-width: 1550px) {
+    .icons-header-with-select{
+      /* margin-left:1000px; */
+    }
+  }
+  @media screen and (min-width: 700px) {
+    .icons-header-without-select{
+        margin-left: 370px;
+        padding-top: 3px; 
+    }
+    /* .icons-header-with-select{
+        margin-left:50px;
+    } */
+  }
+  /* @media screen and (min-width: 850px) {
+    .icons-header{
+        margin-left:750px;
+    }
+  } */
+  @media screen and (min-width: 1150px) {
+    .icons-header-with-select{
+        margin-left: 370px;
+        padding-top: 3px;    }
+  }
+.icons-header img{
+margin-left:15px;
+}
+.icons-header-with-select{
+    margin-right:5px; 
+}
 
 .headerLeaderHub{
-    display: flex;
-    height: 0px;
+    background-color: #1FB9C1;
+    box-shadow: 0px 3px 6px #00000029;
+    padding-top: 8px;
+    height: 60px;
+    width:100vw !important;
+    margin:0px !important
+
+    /* display: flex; */
+    /* height: 0px; */
 }
 .headerLeaderHub .LC_imageUser{
     position: absolute;
