--- a/src/component/hub/tabs/tabs.css
+++ b/src/component/hub/tabs/tabs.css
@@ -4,13 +4,14 @@
       /* overflow-y: hidden !important; */
 }
 .body-cards{
-  height: 85vh;
+    margin-top: 10px;
+  height:87vh;
     background: #FFFFFF 0% 0% no-repeat padding-box;
     border-radius:5px;
     opacity: 1;
     overflow-y: auto!important;
     /* box-shadow: 0px 3px 6px #00000029; */
-    margin-right: 10px;
+    margin-right: 25px;
 }
 @media screen and (min-width: 770px) {
     .wraperr-tabs >.row{
