--- a/src/component/hub/hub.css
+++ b/src/component/hub/hub.css
@@ -13,13 +13,15 @@ margin-left: 8vh;
 }
 
 .headerLeaderHub{
-    display: flex;
+    /* display: flex; */
+    float: right;
     height: 0px;
+    /* padding-top:14px; */
 }
 .headerLeaderHub .LC_imageUser{
-    position: absolute;
-    right: 21px;
-    top: 18px;
+    position: relative;
+    /* right: 21px; */
+    /* top: 18px; */
     z-index: 199;
     cursor: pointer;
 }
